# NilePlateID

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  SUMMARY.md  app.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
.streamlit/: config.toml
Classical Detection Method/: README.md  canny_plate_detection.py  image_preprocessing.py  image_transforms.py  main.py  ocr_processing.py  plate_detection.py
api/: index.html
architecture/: index.html
components/reid/: index.html
data/meta/: detections.json  index.csv  run_config.json
docs/: api.md  architecture.md  getting-started.md  index.md  yolo.md
docs/components/: classical.md  index.md  reid.md  yolo-ocr.md  yolo.md
scripts/: audit_vehicle_reid_vendor.py  check_model.py  check_ocr.py  check_reid_model.py  clean_and_rerun.py  clean_artifacts.py  demo_enhancement.py  download_weights.py  parking_system.py  video_to_frames.py
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
site/architecture/: index.html
site/classical/: index.html
site/components/: index.html
site/getting-started/: index.html
site/reid/: index.html
site/search/: search_index.json
site/yolo/: index.html
src/: cli.py  download_weights.py  smoke_test.py
src/app_pages/: classical_page.py  demo_page.py  future_work_page.py  overview_page.py  pipeline_page.py  reid_page.py  (+1 more)
temp/: crop10.txt  crop13.txt  crop14.txt  crop15.txt  crop17.txt  crop3.txt  crop4.txt  crop6.txt  crop8.txt
tests/: test_associate.py  test_normalize.py  test_ocr.py
(+22 files in other folders)
