[project]
name = "nileplateid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown",
    "ultralytics",
    "easyocr",
    "opencv-python",
    "numpy",
    "pandas",
    "tqdm",
    "matplotlib",
    "torch",
    "torchvision",
    "timm",
    "supervision",
    "pytesseract>=0.3.13",
    "streamlit>=1.52.2",
]
